d3heatmap 0.5.0 (2015-06-12)
----------------------------------------

* dendToTree - now cleans NA inside the nodePar/edgePar sub items in the list.
d3heatmap 0.4.0 (2015-06-11)
----------------------------------------

* CRITICAL BUGFIX: The row and column labels were not ordered correctly in
  previous versions of d3heatmap--ouch! Thank you Sang Hoon Yi!

* The vertical order of row data has been flipped, it now matches the output of
  stats::heatmap.

* d3heatmap no longer depends on the leaflet package. It now depends on scales
  version 2.5 or later.