@@ -2,6 +2,9 @@ d3heatmap 0.5.0 (2015-06-12)
 ----------------------------------------
 
 * dendToTree - now cleans NA inside the nodePar/edgePar sub items in the list.
+
+* d3heatmap - gains new parameters from stats::heatmap and gplots::heatmap.2 - including the ability to input the dendrogram that will be plotted. (currently it only allows for colored labels)
+
 d3heatmap 0.4.0 (2015-06-11)
 ----------------------------------------
 
